update added define-area helper rename def helper to define-var

--- a/tests/define-var/tmpl/index.hbs
+++ b/tests/define-var/tmpl/index.hbs
@@ -16,13 +16,13 @@ url: "#link"
 title: "More..."
 
 ---
-{{{def group="header" name="small-stage" type="CheckBox" title="Size" desc="Large or Small Stage"}}}
-{{{def group="header" name="image" type="ImageSelect" title="Image"}}}
-{{{def group="header" name="header" type="Headline"}}}
-{{{def name="text" type="Editor" title="Text"}}}
-{{{def name="date" type="DateSelect" title="Date"}}}
-{{{def name="with-link" type="CheckBox" title="With Link" desc="Need for used Link"}}}
-{{{def name="link" type="Link" title="Link"}}}
+{{{define-var group="header" name="small-stage" type="CheckBox" title="Size" desc="Large or Small Stage"}}}
+{{{define-var group="header" name="image" type="ImageSelect" title="Image"}}}
+{{{define-var group="header" name="header" type="Headline"}}}
+{{{define-var name="text" type="Editor" title="Text"}}}
+{{{define-var name="date" type="DateSelect" title="Date"}}}
+{{{define-var name="with-link" type="CheckBox" title="With Link" desc="Need for used Link"}}}
+{{{define-var name="link" type="Link" title="Link"}}}
 
 <article class="{{#if small-stage}} small-stage{{/if}}">
 
