--- a/tests/mixin/tmpl/index.hbs
+++ b/tests/mixin/tmpl/index.hbs
@@ -21,6 +21,7 @@
         {{{mixin "sub-partial" example-list-array}}}
     {{/content}}
 {{/mixin}}
+
 <br>
-{{#mixin "partial" this headline=headline-3}}
-{{/mixin}}
+
+{{{mixin "partial" this headline=headline-3}}}
